kubernetes/apps/kids-prep/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: forwarded-https
  namespace: kids-prep
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: https
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kids-prep
  namespace: kids-prep
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: kids-prep-forwarded-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: kids-prep.miak-it.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kids-prep
                port:
                  number: 4000
